<resources>
    <string name="app_name">Elevator To A Parallel World</string>
    <string name="backgroundstart">backgroundStart</string>
    <string name="start">Начать</string>
    <string name="hints">Подсказки</string>
    <string name="survivors">Выжившие</string>
    <string name="info">О игре</string>
    <string name="exit">Выход</string>
    <string name="back">Назад</string>

    <string-array name="survivors">
        <item>Пусто</item>
        <item>Пусто</item>
        <item>Пусто</item>
        <item>Пусто</item>
        <item>Пусто</item>
    </string-array>


</resources>