<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/startlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/start"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/buttonHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/hints"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"/>

        <Button
        android:id="@+id/buttonSurvivors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/survivors"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:background="@drawable/style_btn_stroke_black95_press_white"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/exit"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:background="@drawable/style_btn_stroke_black95_press_white"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</RelativeLayout>